[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "timebox"
version = "0.6.0"
authors = [
    { name = "Walter Scott", email = "me@walteh.com" }
]
description = "A simple timeboxing utility for Things 3"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "rumps>=0.4.0",
    "things.py>=0.1.1",
    "watchdog>=2.1.0"
]

[project.scripts]
timebox = "main:main"
